[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/Discussion/DetailedDiscussion.gd" type="Script" id=1]
[ext_resource path="res://images/background.jpg" type="Texture" id=2]
[ext_resource path="res://images/logo_small.png" type="Texture" id=3]
[ext_resource path="res://fonts/OpenSans_Normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/modal_window.png" type="Texture" id=5]
[ext_resource path="res://images/button_up.png" type="Texture" id=6]
[ext_resource path="res://images/button_down.png" type="Texture" id=7]
[ext_resource path="res://images/button_new-comment.png" type="Texture" id=8]
[ext_resource path="res://images/modal_box.png" type="Texture" id=9]
[ext_resource path="res://images/frames/loading/Loading.tres" type="SpriteFrames" id=10]
[ext_resource path="res://images/refresh.png" type="Texture" id=11]

[node name="DetailedDiscussion" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.394, 298.801 )
scale = Vector2( 0.853, 0.501 )
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 179.55, 78.85 )
texture = ExtResource( 3 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 377.0
margin_top = 68.0
margin_right = 927.0
margin_bottom = 136.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.694118, 0.109804, 0.109804, 1 )
text = "DETAILED DISCUSSION"
scroll_active = false

[node name="detailed_discussion" type="Sprite" parent="."]
position = Vector2( 510, 370 )
scale = Vector2( 0.7, 0.575 )
texture = ExtResource( 5 )

[node name="detailed_discussion_title" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -575.0
margin_top = -350.0
margin_right = 1325.0
margin_bottom = -265.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="detailed_discussion_postedby" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -575.0
margin_top = -280.0
margin_right = 1325.0
margin_bottom = -195.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="detailed_discussion_details" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -575.0
margin_top = -210.0
margin_right = 1325.0
margin_bottom = 30.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="seperator" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -575.0
margin_top = -100.0
margin_right = 1325.0
margin_bottom = -8.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "__________________________________________________________________________________________"
text = "__________________________________________________________________________________________"
scroll_active = false

[node name="detailed_discussion_comment_title" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -575.0
margin_top = -50.0
margin_right = -231.0
margin_bottom = 35.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Comments"
text = "Comments"

[node name="no_comment_label" type="RichTextLabel" parent="detailed_discussion"]
visible = false
margin_left = -575.0
margin_top = 25.0
margin_right = 1325.0
margin_bottom = 110.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.694118, 0.109804, 0.109804, 1 )
custom_colors/font_color_selected = Color( 0.694118, 0.109804, 0.109804, 1 )
custom_colors/font_color_shadow = Color( 0.694118, 0.109804, 0.109804, 1 )
bbcode_enabled = true
bbcode_text = "No Comment"
text = "No Comment"
scroll_active = false

[node name="comment_index_1" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -575.0
margin_top = 15.0
margin_right = -525.0
margin_bottom = 100.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="comment_content_1" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -525.0
margin_top = 17.1156
margin_right = 1075.0
margin_bottom = 187.116
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="comment_postedby_1" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -525.0
margin_top = 125.0
margin_right = 1075.0
margin_bottom = 210.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="comment_index_2" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -575.0
margin_top = 190.0
margin_right = -525.0
margin_bottom = 275.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="comment_content_2" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -525.0
margin_top = 190.0
margin_right = 1075.0
margin_bottom = 360.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="comment_postedby_2" type="RichTextLabel" parent="detailed_discussion"]
margin_left = -525.0
margin_top = 305.0
margin_right = 1075.0
margin_bottom = 390.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="ScrollUp_Btn" type="TouchScreenButton" parent="detailed_discussion"]
position = Vector2( 500, 85 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 6 )

[node name="ScrollDown_Btn" type="TouchScreenButton" parent="detailed_discussion"]
position = Vector2( 500, 185 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 7 )

[node name="NewComment_Btn" type="TouchScreenButton" parent="detailed_discussion"]
position = Vector2( 402.857, -50 )
scale = Vector2( 0.869877, 2.06511 )
normal = ExtResource( 8 )

[node name="loading" type="Popup" parent="."]
visible = true
margin_top = 20.4056
margin_right = 40.0
margin_bottom = 60.4056

[node name="loadingbg" type="Sprite" parent="loading"]
position = Vector2( 513.195, 303.252 )
scale = Vector2( 2.285, 1 )
texture = ExtResource( 9 )

[node name="loading" type="AnimatedSprite" parent="loading"]
position = Vector2( 552.116, 311.961 )
frames = ExtResource( 10 )
animation = "loading"
frame = 5
playing = true

[node name="refreshBtn" type="TouchScreenButton" parent="."]
position = Vector2( 732.704, 336.875 )
scale = Vector2( 0.0940729, 0.0940729 )
normal = ExtResource( 11 )
